--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <script src="https://kit.fontawesome.com/73f0f3b60e.js" crossorigin="anonymous"></script>
   </head>
 
-  <body id="top" style="background: #fdfafb" onload="init()">
+  <body id="top" style="background: #fdfafb">
     <header id="header">
       <img src="Images/Logo.png" alt="Company Logo" class="clk" id="logo">
       <h3 class="clk" id="siteName">Qrystalnet</h1>
