--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
           <br/><br/>  ​
           You'll have the option of paying with Bitcoin (BTC), Ether (ETH), Tether (USDT) or fiat currency (USD, GBP, etc.).</p>
         </div>
-        <img src="images/All Money.jpg" alt="Fiat & Crypto" class="imgcoins" id="imgall"/>
+        <img src="images/All Money.jpg" alt="Fiat & Crypto" class="imgcoins boxwd" id="imgall"/>
       </div>
         
       <div class="central" id="postcol">
@@ -611,6 +611,8 @@
           <h1 class="sectionHeadings">A WORD ON QRYSTAL'S FUNCTION</h1>
           <p class="pgtxt" id="wotx">
             As stated earlier, Qrystal is a utility token. This means that its sole function is: for use in transactions within the Qrystalnet ecosystem. Qrystal is NOT a get-rich-quick scheme. There is no guarantee that its value will rise dramatically like that of Bitcoin and other successful coins. While we naturally hope for high demand levels (which would positively impact Qrystal's value), we can not make promises based on projections.
+            <br><br>
+            In any case, price stability is the goal because we intend for qrystal to be a crypto token that users of the Qrystalnet ecosystem can rely on day to day; not one whose value see-saws wildly, exposing users to great risk.
   ​          <!--
             <br/><br/> 
             You should read the Token Purchase Agreement before you proceed to participate in the Qrystal crowdsale. Visit the Legal page to view the <a href="legal/#Token Sale" class="txt-link">Agreement</a>. Cryptocurrency and blockchain are relatively new technologies and carry a high level of risk. You would do well to understand the risks that are inherent in your purchase of Qrystal coins.
@@ -844,6 +846,6 @@
         document.getElementById("notif1").style.display = "none";
         document.getElementById("adbtn").style.visibility = "visible";
       }
-    </script>
+    </script>    
   </body>
 </html>                     
