--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
           <div class="leftcol" id="fnltxt">
             <h1 class="sectionHeadings">FINAL NOTE</h1>
             <P class="pgtxt">
-              Technology continues to improve our lives with new inventions that make doing work easier than ever before. The apps and platforms that the Qrystalnet blockchain supports will carry on this tradition, and before long, Qrystalnet LLC will come to be known as a major driver of the 4th industrial revolution. "Qrystals" will become a household word, known all around the world by people who own use qrrystal coins. You have a chance to become one of the first people to own qrystals. I hope you go ahead and take it!
+              Technology continues to improve our lives with new inventions that make doing work easier than ever before. The apps and platforms that the Qrystalnet blockchain supports will carry on this tradition, and before long, Qrystalnet LLC will come to be known as a major driver of the 4th industrial revolution. "Qrystals" will become a household word, known all around the world by people who own and use qrystal coins. You have a chance to become one of the first people to own qrystals. I hope you go ahead and take it!
               <br/><br/>  
               Thanks for taking the time to visit the Qrystalnet website. We look forward to your participation in Qrystalnet's launch.
             </P>
